--- a/views/kategorije/sve_kategorije.ejs
+++ b/views/kategorije/sve_kategorije.ejs
@@ -167,9 +167,9 @@
             <!-- Kolona -->
             <div class="col-lg-4 col-sm-6 mt-1 mb-3 ">
                 <!-- Kartica za kategoriju-->
-                <div class="card" style="width: 20rem; background-color: rgb(61, 61, 61);">
+                <div class="card" style="width: 20rem; background-color: rgb(61, 61, 61); box-shadow: none; border: 1px solid rgba(98, 0, 255, 0.301);">
                     <!-- Slika kategorije -->
-                    <img class="card-img-top " src="../static/img/avatar.jpg" alt="Card image cap">
+                    <img class="card-img-top " src="/images/site/category.jpg" alt="Card image cap">
                     <!-- Sadrzaj kartice-->
                     <div class="card-body">
                         <!-- Naziv kategorije-->
