--- a/views/korisnici/dodavanjeSlike.ejs
+++ b/views/korisnici/dodavanjeSlike.ejs
@@ -1,4 +1,3 @@
-
 <!--Title-->
 <title> <%- title %></title>
 
@@ -74,76 +73,66 @@
     </div>
     <!--/Navigacija------------------------------------------------------------------------------------------------------------------>
 
-
-    <!-- Naslov -->
+      <!-- Naslov -->
     <div class="container mt-4 mb-4 text-center">
-        <h1 style="border-radius: 30px; box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.274);">Registracija</h1>
+        <h1 style="border-radius: 30px; box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.274);">Slika profila</h1>
     </div>
 
-    <!-- Telo za kreiranje novog korisnika-->
+
+    <!-- Telo dodavanja slike -->
     <div class="container center " >
-        <!-- Forma -->
-        <form action='/registracija' method ='POST'  style="display: flex; justify-content: center;">
-            <!-- Red -->
-           <div class="form-group col-sm-6" >
+        <!-- Forma za dodavanje slike -->
+            <form action = '/svi_korisnici/profil/<%-korisnik[0].id%>/slika' method='POST' enctype="multipart/form-data" style="display: flex; justify-content: center;"> 
+
                 <!-- Slika -->
-                <div class="  d-flex justify-content-center">
-                    <div class="form-group mt-3">
-                        <!--Dodavanje slike-->
-                        <label for="slika">
-                            <img id="slika_pregled" src="/images/site/place1.png" width="190" height="140" class="rounded-0" style=" border-radius: 10px; border: 2px solid rgba(255, 255, 255, 0.308);;" />
-                        </label>
-                        <br>
-                        <label for="slika" class="btn btn-outline-light" style="width: 190px;"><i class="fas fa-upload"></i></label>
-                        <input type="file" accept="image/*" class="custom-file-input" hidden id="slika" name="slika">
+                <div class="form-group col-sm-6" >
+                    <!-- Slika -->
+                    <div class="  d-flex justify-content-center">
+                        <div class="form-group mt-3">
+                            <!--Dodavanje/ Izmena slike-->
+                            <label for="slika">
+                                <img style="border: 3px solid rgba(165, 165, 165, 0.719); padding: 2px;" 
+                                <% if (korisnik[0].slika != '') { %>
+                                src="/images/uploads/korisnici/<%-korisnik[0].slika%>" 
+                                <% } else {%>
+                                src="/images/site/place1.png"
+                               <% } %>
+                                id="slika_pregled"
+                                width = '290'
+                                height = '240' 
+                                
+                                />
+                                </label>
+                            <br>
+                            <label for="slika" class="btn btn-outline-light" style="width: 100%;"><i class="fas fa-upload"></i></label>
+                            <input type="file" hidden accept="image/*" class="" id="slika" name="slika">
+                            <button type="submit" class="btn btn-success mb-3 mt-4" style="width: 100%;">Gotovo</button>
+                        </div>
+
+
                     </div>
                 </div>
                 <!-- /Slika-->
-                
-               <!-- Ime -->
-                   <label>*Ime</label>
-                   <input type="text" class="form-control center-style" name = 'ime' required <%if (greska != ''){%> value = '<%-greska.ime%>'<%}%>> 
-                <!-- /Ime -->
-
-               <!-- Prezime -->
-                    <label>*Prezime</label>
-                    <input type="text" class="form-control center-style" name = 'prezime' required <%if (greska != ''){%> value = '<%-greska.ime%>'<%}%>>
-                <!-- Prezime-->
-
-                <!-- Email -->
-                    <label>*Email</label>
-                    <input type="email" class="form-control center-style" name = 'email' required <%if (greska != ''){%> value = '<%-greska.email%>' autofocus<%}%>
-                <!-- /Email -->
-
-                    <!-- Email greska -->
-                        <%if (greska != ''){%> <spam class="text-danger small">Ovaj email već postoji!</spam> <br><%}%>
-                    <!-- Email greska -->
-
-
-                <!-- Lozinka -->
-                    <label>*Lozinka</label>
-                    <input type="password" class="form-control center-style" name = 'lozinka' required>
-                <!-- /Lozinka -->
-                
-
-                <!-- Submit -->
-                    <button type="submit" class = 'btn btn-info text-light  mb-3 mt-3' style="width: 100%;" ><b>Sledeće > </b></button>
-                <!-- /Submit -->
-
-
-                <br>
-                <!-- Log in-->
-                <span class="h6 justify-content-center d-flex">Već imate nalog -<a href = '/login'>&nbsp; ulogujte se.</a></span>
-                <!-- /Log in-->
-
-        </form>
+            </form>
+        <!-- /Forma za dodavanje slike -->
     </div>
+    <!-- /Telo dodavanja slike-->
 
 
 
 
 
-    <!-- Footer -->
+
+
+
+
+
+
+
+
+
+
+<!-- Footer -->
     <div class="container-fluid fixed-bottom footer">
         <!-- Linija -->
         <hr class='bg-white'>
@@ -163,7 +152,3 @@
         </div>
     </div>
 <!-- /Footer -->
-
-
-    
-</body>
