--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,17 @@ body
 
 
 
+.logoSlika
+{
+    width: 70px;
+    height: 50px;
+    object-fit: cover;
+    margin-left: 30px;
+    margin-right: 73px;
+    background-size: cover;
+}
+
+
 
 
 
@@ -94,11 +105,12 @@ body
 
 .avatar {
     vertical-align: middle;
-    width: 60px;
-    height: 50px;
+    width: 50px;
+    height: 40px;
     border-radius: 60%;
     margin-left: 50px;
-    margin-right: 20px;
+    margin-right: 30px;
+    border: 1px solid rgb(150, 150, 150);
   }
 
 
