--- a/views/log_reg/registracija.ejs
+++ b/views/log_reg/registracija.ejs
@@ -6,6 +6,7 @@
 <body>
 
 
+        
     <!--Navigacija-->
     <div class="navigation fixed-top">
         <div class="container-fluid" >
@@ -13,9 +14,11 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
             
                 <!--Logo-->
-                <a class="navbar-brand" href="#">
-                    <b >Web oglasi za posao</b>
-                </a>
+                <div>
+                    <a href = '/'>
+                    <img class="navbar-brand logoSlika" src = '/images/site/WOPlogo.svg'></img>
+                    </a>
+                </div>
                 
                         
 
@@ -25,36 +28,27 @@
                 <!--Ostali deo menia-->
                 <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
                     <!--Pretrazivac-->
-                    <form class="form-inline" action ='' method=''>
-                    <input class="form-control mr-sm-2" style="background-color: rgba(28, 26, 61, 0.123); color: aliceblue;" type="search" placeholder="Pratraži poslove" aria-label="Search">
+                    <form class="form-inline" action ='/svi_poslovi' method='GET'>
+                        <input class="form-control  mr-sm-5" style="background-color: rgba(28, 26, 61, 0.123); color: aliceblue; width: 20rem;" type="search" placeholder="Pratraži poslove" aria-label="Search" name='kljucneReci'>
                     </form>    
                     <!-- /Pretrazivac--> 
 
                 <div class="navbar-nav ml-auto">
                     
-                    <a class="nav-item nav-link active" href="#">Početna <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link " href="#">O nama</a>
+                    <a class="nav-item nav-link" href="/">Početna</a>
+                    <a class="nav-item nav-link " href="/o_nama">O nama</a>
                     <!--  Deo koji gost vidi  -->
-                    <a class="nav-item nav-link" href="#">Prijavi se</a>
-                    <a class="nav-item nav-link" href="#" style="color : rgb(0, 153, 255)">Registruj se</a>
-                    <!--/End-->
+                   
+                    <a class="nav-item nav-link " href="/logIn">Prijavi se</a>
+                    <a class="nav-item nav-link active" href="/registracija" style="color : rgb(0, 153, 255)">Registruj se</a>
+                    <!-- /Deo koji gost vidi -->
+                   
                 </div>
                 </div> 
                 <!--/Ostali deo menija-->
 
-                <!--Deo koji gost ne vidi-->
-                    <!--Dropdown avatara-->
-                    <div class="dropdown show">
-                        <img class="avatar" src = '../static/img/avatar.jpg' href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    </img>
-                        <div class="dropdown-menu bg-info" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item text-black" href="#">Moj profil</a>
-                            <a class="dropdown-item text-danger" href="#">Odjavi se</a>
-                        </div>
-                    </div>
-                    <!-- /Dropdown avatar-->
-                <!-- /Deo koji gost ne vidi-->    
-
+               
+                
                 <!-- Button response -->
 
                 <button class=" navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
@@ -86,19 +80,6 @@
         <form action='/registracija' method ='POST'  style="display: flex; justify-content: center;">
             <!-- Red -->
            <div class="form-group col-sm-6" >
-                <!-- Slika -->
-                <div class="  d-flex justify-content-center">
-                    <div class="form-group mt-3">
-                        <!--Dodavanje slike-->
-                        <label for="slika">
-                            <img id="slika_pregled" src="/images/site/place1.png" width="190" height="140" class="rounded-0" style=" border-radius: 10px; border: 2px solid rgba(255, 255, 255, 0.308);;" />
-                        </label>
-                        <br>
-                        <label for="slika" class="btn btn-outline-light" style="width: 190px;"><i class="fas fa-upload"></i></label>
-                        <input type="file" accept="image/*" class="custom-file-input" hidden id="slika" name="slika">
-                    </div>
-                </div>
-                <!-- /Slika-->
                 
                <!-- Ime -->
                    <label>*Ime</label>
@@ -142,9 +123,9 @@
 
 
 
-
+    
     <!-- Footer -->
-    <div class="container-fluid fixed-bottom footer">
+    <div class="container-fluid fixed-bottom footer small">
         <!-- Linija -->
         <hr class='bg-white'>
         <div class="row text-center">
@@ -156,14 +137,12 @@
             </div>
             
             <div class="col-lg-4 col-sm-4">
-                <a href=""><i class="fab fa-instagram ml-3" style="color:blueviolet"></i></a>
-                <a href=""><i class="fab fa-facebook ml-3"></i></a>
-                <span class = 'text-secondary'><i class="fas fa-phone-alt ml-3"></i> 0123-456</span> 
+                <a href="https://instagram.com/__nik0lv?igshid=1lzhwdmj6zw2o&amp;fbclid=IwAR3qzJemENnY9hk63ATgLgRVBJM-xfb940iFVN8ZRxBRqSKJ6kYHrtHd25A"><i class="fab fa-instagram ml-3" style="color:blueviolet"></i></a>
+                <a href="https://www.facebook.com/nikola.vladimirov.589/"><i class="fab fa-facebook ml-3"></i></a>
             </div>
         </div>
     </div>
-<!-- /Footer -->
-
+    <!-- Footer -->
 
     
 </body>
