--- a/views/error_404.ejs
+++ b/views/error_404.ejs
@@ -77,7 +77,7 @@
    <!-- Sadržaj stranice -->
    <div class="container">
        <div class="">
-           <div class="h1 text-center text-warning" style="padding : 250px">404 Error!<br> Page not found.</div>
+          <img src = '/images/site/WOP404.png' class="img404"/>
        </div>
    </div>
    <!-- /Sadržaj stranice -->
