--- a/views/korisnici/svi_korisnici.ejs
+++ b/views/korisnici/svi_korisnici.ejs
@@ -104,7 +104,7 @@
 
     <div class="container text-center"> <b class="h2"> Svi korisnici </b> </div>
     <hr class="container" style="background-color: beige;">
-    <div class="container mb-3 mt-2">Prikazani korisnici : <b><%-(ucitani * strana)%></b> / <%-ukupno%></div>
+    <div class="container mb-3 mt-2">Ukupno korisnika : <b><%-ukupno%></b></div>
 
 
     <!-- Izlistavanje svih korisnika -->
@@ -185,7 +185,7 @@
           <%}%>
           <!-- Prethodna -->
 
-          <% if(ukupno>10){ %>
+          <% if(ucitani>=10){ %>
           <!-- Trenutna -->
           <li class="page-item active "><a class="btn page-link text-warning bg-dark" href="#"><%-strana%></a></li>
           <!-- Trenutna -->
