Dodata mogucnost korisnika da vidi/sakrije lozinku.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
                     <h5 class="modal-title" id="exampleModalLabel"></h5>
                     </div>
                     <div class="modal-body">
-                        <span class="text-success">Čestitamo Vaša registracija je uspešna!</span> 
+                        <span class="text-success">Uspešno ste se registrovali. Dobro došli na sajtu <b>Web oglasi za posao.</b></span> 
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">ok</button>
