--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,7 +59,14 @@ body
         
     }
 
-    
+    .field-icon {
+        float: right;
+        margin-left: -25px;
+        margin-top: -25px;
+        margin-right: 10px;
+        position: relative;
+        z-index: 2;
+      }
 
 
 
