Popravljen futer i index stranica

--- a/views/error_404.ejs
+++ b/views/error_404.ejs
@@ -113,15 +113,16 @@
 
 
     
+
     <!-- Footer -->
-    <div class="container-fluid fixed-bottom footer small">
+    <div class="container-fluid fixed-bottom small " style="background-color:  #142a4d;; margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
         <!-- Linija -->
-        <hr class='bg-white'>
+      
         <div class="row text-center">
-            <div class="col-lg-4 col-sm-4 text-secondary">
+            <div class="col-lg-4 col-sm-4 text-">
                 nikolavlad63@gmail.com
             </div>
-            <div class="col-lg-4 col-sm-4 text-secondary">
+            <div class="col-lg-4 col-sm-4 text">
                 Web oglasi za posao - 2020 <sup>&copy</sup> 
             </div>
             
