--- a/views/kategorije/nova_kategorija.ejs
+++ b/views/kategorije/nova_kategorija.ejs
@@ -160,15 +160,16 @@
         <!-- /Unos podataka -->
   
         
+
     <!-- Footer -->
-    <div class="container-fluid fixed-bottom footer small">
+    <div class="container-fluid fixed-bottom small " style="background-color:  #142a4d;; margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
         <!-- Linija -->
-        <hr class='bg-white'>
+      
         <div class="row text-center">
-            <div class="col-lg-4 col-sm-4 text-secondary">
+            <div class="col-lg-4 col-sm-4 text-">
                 nikolavlad63@gmail.com
             </div>
-            <div class="col-lg-4 col-sm-4 text-secondary">
+            <div class="col-lg-4 col-sm-4 text">
                 Web oglasi za posao - 2020 <sup>&copy</sup> 
             </div>
             
@@ -179,5 +180,4 @@
         </div>
     </div>
     <!-- Footer -->
-
 </body>
