--- a/views/korisnici/svi_korisnici.ejs
+++ b/views/korisnici/svi_korisnici.ejs
@@ -213,25 +213,26 @@
 
 
     
+
     <!-- Footer -->
-    <div class="container-fluid fixed-bottom footer small">
-        <!-- Linija -->
-        <hr class='bg-white'>
-        <div class="row text-center">
-            <div class="col-lg-4 col-sm-4 text-secondary">
-                nikolavlad63@gmail.com
-            </div>
-            <div class="col-lg-4 col-sm-4 text-secondary">
-                Web oglasi za posao - 2020 <sup>&copy</sup> 
-            </div>
-            
-            <div class="col-lg-4 col-sm-4">
-                <a href="https://instagram.com/__nik0lv?igshid=1lzhwdmj6zw2o&amp;fbclid=IwAR3qzJemENnY9hk63ATgLgRVBJM-xfb940iFVN8ZRxBRqSKJ6kYHrtHd25A"><i class="fab fa-instagram ml-3" style="color:blueviolet"></i></a>
-                <a href="https://www.facebook.com/nikola.vladimirov.589/"><i class="fab fa-facebook ml-3"></i></a>
-            </div>
-        </div>
-    </div>
-    <!-- Footer -->
+    <div class="container-fluid fixed-bottom small " style="background-color:  #142a4d;; margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
+      <!-- Linija -->
+    
+      <div class="row text-center">
+          <div class="col-lg-4 col-sm-4 text-">
+              nikolavlad63@gmail.com
+          </div>
+          <div class="col-lg-4 col-sm-4 text">
+              Web oglasi za posao - 2020 <sup>&copy</sup> 
+          </div>
+          
+          <div class="col-lg-4 col-sm-4">
+              <a href="https://instagram.com/__nik0lv?igshid=1lzhwdmj6zw2o&amp;fbclid=IwAR3qzJemENnY9hk63ATgLgRVBJM-xfb940iFVN8ZRxBRqSKJ6kYHrtHd25A"><i class="fab fa-instagram ml-3" style="color:blueviolet"></i></a>
+              <a href="https://www.facebook.com/nikola.vladimirov.589/"><i class="fab fa-facebook ml-3"></i></a>
+          </div>
+      </div>
+  </div>
+  <!-- Footer -->
 
 
 
