--- a/views/korisnici/izmena_korisnika.ejs
+++ b/views/korisnici/izmena_korisnika.ejs
@@ -210,8 +210,9 @@
 
         
 
-    <!-- Footer -->
-    <div class="container-fluid fixed-bottom small " style="background-color:  #142a4d;; margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
+      
+      <!-- Footer -->
+      <div class="container-fluid fixed-bottom small footer " style=" margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
         <!-- Linija -->
       
         <div class="row text-center">
@@ -229,5 +230,6 @@
         </div>
     </div>
     <!-- Footer -->
+
 
 </body>
