--- a/views/korisnici/korisnik.ejs
+++ b/views/korisnici/korisnik.ejs
@@ -102,7 +102,7 @@
    
 
     <!-- Prikaz podataka o korisniku (profilu)-->
-    <div class="container-fluid   mt-5 bg-dark " style="padding-left: 20px; padding-top: 10px; border-radius: 30px;">
+    <div class="container-fluid   mt-5  " style="padding-left: 20px; padding-top: 10px; border-radius: 30px; background-color: rgba(0, 0, 36, 0.226);">
         
         <!-- Red -->
         <div class="row">
@@ -434,8 +434,8 @@
     </div>
 
     
-    <!-- Footer -->
-    <div class="container-fluid fixed-bottom small " style="background-color:  #142a4d;; margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
+      <!-- Footer -->
+      <div class="container-fluid fixed-bottom small footer " style=" margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
         <!-- Linija -->
       
         <div class="row text-center">
