--- a/views/korisnici/svi_korisnici.ejs
+++ b/views/korisnici/svi_korisnici.ejs
@@ -103,7 +103,7 @@
 
 
     <div class="container text-center"> <b class="h2"> Svi korisnici </b> </div>
-    <hr class="container" style="background-color: beige;">
+    <hr class="container" style="background-color: rgb(0, 25, 134);">
     <div class="container mb-3 mt-2">Ukupno korisnika : <b><%-ukupno%></b></div>
 
 
@@ -111,12 +111,12 @@
         <div class="container">
 
             <!-- Tabela-->
-            <table class="table table-striped text-white table-dark table-responsive-sm " >
+            <table class="table table-striped text-white table-responsive-sm " style="border-width: 0px;" >
                
 
 
                 <!-- Naslov -->
-                <thead class="bg-info ">
+                <thead class=" ">
                 <!-- Podaci za prikaz -->
                   <tr>
                    
@@ -128,7 +128,7 @@
                 <!-- /Podaci za prikaz -->
               
                 <!-- Prazan prostor -->
-                  <tr style="background-color: #142a4d;">
+                  <tr style="background-color: #46464600;">
                     <td colspan="6"></td>
                   </tr>
                 <!-- /Prazan prostor -->
@@ -146,11 +146,7 @@
                   </tr>
                 <!-- /Podaci o korisniku-->
 
-                <!-- Prazan prostor -->
-                  <tr style="background-color: #142a4d;">
-                    <td colspan='5'></td>
-                  </tr>
-                <!-- /Prazan prostor-->
+               
                 </tbody>
                 <!-- Telo -->
                 <% } %>
@@ -214,25 +210,27 @@
 
     
 
+       
+      <!-- Footer -->
+      <div class="container-fluid fixed-bottom small footer " style=" margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
+        <!-- Linija -->
+      
+        <div class="row text-center">
+            <div class="col-lg-4 col-sm-4 text-">
+                nikolavlad63@gmail.com
+            </div>
+            <div class="col-lg-4 col-sm-4 text">
+                Web oglasi za posao - 2020 <sup>&copy</sup> 
+            </div>
+            
+            <div class="col-lg-4 col-sm-4">
+                <a href="https://instagram.com/__nik0lv?igshid=1lzhwdmj6zw2o&amp;fbclid=IwAR3qzJemENnY9hk63ATgLgRVBJM-xfb940iFVN8ZRxBRqSKJ6kYHrtHd25A"><i class="fab fa-instagram ml-3" style="color:blueviolet"></i></a>
+                <a href="https://www.facebook.com/nikola.vladimirov.589/"><i class="fab fa-facebook ml-3"></i></a>
+            </div>
+        </div>
+    </div>
     <!-- Footer -->
-    <div class="container-fluid fixed-bottom small " style="background-color:  #142a4d;; margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
-      <!-- Linija -->
-    
-      <div class="row text-center">
-          <div class="col-lg-4 col-sm-4 text-">
-              nikolavlad63@gmail.com
-          </div>
-          <div class="col-lg-4 col-sm-4 text">
-              Web oglasi za posao - 2020 <sup>&copy</sup> 
-          </div>
-          
-          <div class="col-lg-4 col-sm-4">
-              <a href="https://instagram.com/__nik0lv?igshid=1lzhwdmj6zw2o&amp;fbclid=IwAR3qzJemENnY9hk63ATgLgRVBJM-xfb940iFVN8ZRxBRqSKJ6kYHrtHd25A"><i class="fab fa-instagram ml-3" style="color:blueviolet"></i></a>
-              <a href="https://www.facebook.com/nikola.vladimirov.589/"><i class="fab fa-facebook ml-3"></i></a>
-          </div>
-      </div>
-  </div>
-  <!-- Footer -->
+
 
 
 
