--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <title> <%- title %></title>
 
 
-<body style="margin-top: 70px;">
+<body style="margin-top: 67px;">
 
      <!-- Uspesno prijavljivanje -->
      <% if (obavestenje == true) {%>
@@ -135,8 +135,8 @@
 
 
     <!-- Kategorije -->
-    <div class='kategorije bg-secondary ' style="border-top: 1px solid rgba(255, 187, 0, 0.705);">
-        <div class= 'container bg-secondary ' >
+    <div class='kategorije  ' style="border-top: 1px solid rgb(255, 208, 0); ">
+        <div class= 'container ' >
             <div class = 'row'>
 
                 <!-- @Izlistavanej kategorija-->
@@ -186,8 +186,12 @@
                     <!-- Buttons -->
                     <div class="col-12">
                         <section>
-                            <a href = '/svi_poslovi/novi_posao' class="btn btn-lg btn-success">Postavi oglas</a>
-                            <a href = '/svi_poslovi' class="btn btn-lg btn-primary">Pronađi posao</a>
+                            <a href = '/svi_poslovi/novi_posao' class="btn btn-lg text-light" style="background-color: green;" >
+                                Postavi oglas
+                            </a>
+                            <a href = '/svi_poslovi' class="btn btn-lg text-light" style="background-color: teal;">
+                                Pronađi posao
+                            </a>
                         </section>
                     </div>
                     <!-- /Buttons-->
@@ -273,7 +277,7 @@
 
 
     <!-- Footer -->
-    <div class="container-fluid fixed-bottom small " style="background-color:  #142a4d;; margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
+    <div class="container-fluid fixed-bottom small footer " style=" margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
         <!-- Linija -->
       
         <div class="row text-center">
