--- a/views/kategorije/nova_kategorija.ejs
+++ b/views/kategorije/nova_kategorija.ejs
@@ -161,8 +161,9 @@
   
         
 
-    <!-- Footer -->
-    <div class="container-fluid fixed-bottom small " style="background-color:  #142a4d;; margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
+      
+      <!-- Footer -->
+      <div class="container-fluid fixed-bottom small footer " style=" margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
         <!-- Linija -->
       
         <div class="row text-center">
@@ -180,4 +181,5 @@
         </div>
     </div>
     <!-- Footer -->
+
 </body>
