--- a/views/korisnici/dodavanjeSlike.ejs
+++ b/views/korisnici/dodavanjeSlike.ejs
@@ -158,8 +158,9 @@
 
         
  
-    <!-- Footer -->
-    <div class="container-fluid fixed-bottom small " style="background-color:  #142a4d;; margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
+       
+      <!-- Footer -->
+      <div class="container-fluid fixed-bottom small footer " style=" margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
         <!-- Linija -->
       
         <div class="row text-center">
@@ -177,5 +178,6 @@
         </div>
     </div>
     <!-- Footer -->
+
 
 </body>
