--- a/views/poslovi/novi_posao.ejs
+++ b/views/poslovi/novi_posao.ejs
@@ -202,9 +202,9 @@
 
        
   
-    
-    <!-- Footer -->
-    <div class="container-fluid fixed-bottom small " style="background-color:  #142a4d;; margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
+       
+      <!-- Footer -->
+      <div class="container-fluid fixed-bottom small footer " style=" margin: 1px; padding: 10px; border-top: rgb(117, 117, 117) 2px solid;">
         <!-- Linija -->
       
         <div class="row text-center">
@@ -222,5 +222,6 @@
         </div>
     </div>
     <!-- Footer -->
+
     
 </body>
